--- a/project/modules/logboard-views/app/views/bak/index-start-161113-bootstrap4.html
+++ b/project/modules/logboard-views/app/views/bak/index-start-161113-bootstrap4.html
@@ -8,12 +8,12 @@
     <meta name="keywords" content="logs, big data">
     <meta name="author" content="yaoooo and Bootstrap contributors">
     <title>logboard 日志应用系统</title>
-    <link rel="stylesheet" href="../res/styles/css/bootstrap-4.0.0a3.css"/>
-    <link rel="stylesheet" href="../res/styles/css/leaflet-1.0.0rc3.css"/>
-    <link rel="stylesheet" href="../res/fonts/css/font-awesome.css">
-    <link rel="stylesheet" href="../res/styles/general.css"/>
-    <link rel="stylesheet" href="../res/styles/colors.css"/>
-    <link rel="stylesheet" href="../res/styles/svg.css"/>
+    <link rel="stylesheet" href="../../res/styles/css/bootstrap-4.0.0a3.css"/>
+    <link rel="stylesheet" href="../../res/styles/css/leaflet-1.0.0rc3.css"/>
+    <link rel="stylesheet" href="../../res/fonts/css/font-awesome.css">
+    <link rel="stylesheet" href="../../res/styles/general.css"/>
+    <link rel="stylesheet" href="../../res/styles/colors.css"/>
+    <link rel="stylesheet" href="../../res/styles/svg.css"/>
 </head>
 
 <body>
@@ -66,21 +66,21 @@
     <div class="row _text_align_center divider_white40 bg_blue_svg ">
         <div class="col-sm-4 " onclick="window.open('logs-search.html')">
             <div style="margin-top: 25%">
-                <img class="top-icon" src="../images/top-search.svg" alt="日志搜索">
+                <img class="top-icon" src="../../images/top-search.svg" alt="日志搜索">
                 <div class="row divider_white3 "></div>
                 <button class="btn color_white_100  transparent_bg _white_border _width40 letter_spacing4">日志搜索</button>
             </div>
         </div>
         <div class="col-sm-4 " onclick="window.open('logs-stats.html')">
             <div style="margin-top: 25%">
-                <img class="top-icon" src="../images/top-monitor.svg" alt="日志监控">
+                <img class="top-icon" src="../../images/top-monitor.svg" alt="日志监控">
                 <div class="row divider_white3 "></div>
                 <button class="btn color_white_100  transparent_bg _white_border _width40 letter_spacing4">日志监控</button>
             </div>
         </div>
         <div class="col-sm-4 " onclick="window.open('logs-stats.html')">
             <div style="margin-top: 25%">
-                <img class="top-icon" src="../images/top-stats.svg" alt="日志统计">
+                <img class="top-icon" src="../../images/top-stats.svg" alt="日志统计">
                 <div class="row divider_white3 "></div>
                 <button class="btn color_white_100  transparent_bg _white_border _width40 letter_spacing4">日志统计</button>
             </div>
@@ -206,7 +206,7 @@
             <div class="row ">
 
                 <div class="col-sm-4 ">
-                    <div id="expCard01" class="card exp_card _width100 ">
+                    <div id="expCard01" class="card exp_card _width80 ">
                         <!--<img class="card-i2mg-top" src="..." alt="Card image cap">-->
                         <div class="card-block exp_item_padding ">
                             <h4 class="card-title exp_card_title_size">app1二维地图</h4>
@@ -404,14 +404,14 @@
 <!--/末尾页脚-->
 
 <!-- jQuery first, optional tether for tooltips, then Bootstrap JS. -->
-<script type="text/javascript" src="../res/scripts/js/jquery-3.1.0.js"></script>
-<script type="text/javascript" src="../res/scripts/js/tether-1.3.2.min.js"></script>
-<script type="text/javascript" src="../res/scripts/js/bootstrap-4.0.0a3.js"></script>
-<script type="text/javascript" src="../res/scripts/js/holder-2.6.0.min.js"></script>
-<script type="text/javascript" src="../res/scripts/js/d3-4.1.1.js"></script>
-<script type="text/javascript" src="../res/scripts/js/leaflet-1.0.0rc3.js"></script>
-<script type="text/javascript" src="../res/scripts/svg.js"></script>
-<script type="text/javascript" src="../res/scripts/scripts.js"></script>
+<script type="text/javascript" src="../../res/scripts/js/jquery-3.1.0.js"></script>
+<script type="text/javascript" src="../../res/scripts/js/tether-1.3.2.min.js"></script>
+<script type="text/javascript" src="../../res/scripts/js/bootstrap-4.0.0a3.js"></script>
+<script type="text/javascript" src="../../res/scripts/js/holder-2.6.0.min.js"></script>
+<script type="text/javascript" src="../../res/scripts/js/d3-4.1.1.js"></script>
+<script type="text/javascript" src="../../res/scripts/js/leaflet-1.0.0rc3.js"></script>
+<script type="text/javascript" src="../../res/scripts/svg.js"></script>
+<script type="text/javascript" src="../../res/scripts/scripts.js"></script>
 
 <script type="text/javascript">
 
