--- a/project/modules/logboard-views/app/views/bak/page-template-161114-bs3.html
+++ b/project/modules/logboard-views/app/views/bak/page-template-161114-bs3.html
@@ -7,9 +7,9 @@
     <meta name="description" content="leaflet demos">
     <meta name="author" content="yaoooo">
     <link rel="icon" href="../favicon.ico">
-    <title> logs stats 日志统计页</title>
+    <title> title here 标题</title>
     <!--<link href="../res/styles/css/bootstrap-4.0.0a3.css" rel="stylesheet">-->
-    <link href="../res/vendor/css/bootstrap-3.3.7.css" rel="stylesheet">
+    <link href="../res/styles/css/bootstrap-3.3.7.css" rel="stylesheet">
     <!--<link href="../res/styles/general.css" rel="stylesheet">-->
     <link href="../res/styles/layout.css" rel="stylesheet">
     <!--<link href="styles/css/bootstrap-4.0.0a3.min.css" rel="stylesheet">-->
@@ -28,15 +28,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">日志监控与统计</a>
+            <a class="navbar-brand" href="#">Project name</a>
         </div>
-        <!--<div id="navbar" class="collapse navbar-collapse">-->
-            <!--<ul class="nav navbar-nav">-->
-                   <!--<li class="active"><a href="#">Home</a></li>-->
-                <!--<li><a href="#about">About</a></li>-->
-                <!--<li><a href="#contact">Contact</a></li>-->
-            <!--</ul>-->
-        <!--</div>-->
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div><!--/.nav-collapse -->
     </div>
 </nav>
 
@@ -59,10 +59,11 @@
 <script src="../res/scripts/js/jquery-3.1.0.js"></script>
 <script src="../res/scripts/js/holder-2.6.0.min.js"></script>
 <script src="../res/scripts/js/tether-1.3.2.min.js"></script>
-<script src="../res/vendor/js/bootstrap-3.3.7.js"></script>
+<!--<script src="../res/scripts/js/bootstrap-4.0.0a3.js"></script>-->
+<script src="../res/scripts/js/bootstrap-3.3.7.js"></script>
 <!--<script src="../res/scripts/js/d3-4.2.1.js"></script>-->
 <!--<script src="scripts/js/jquery-3.1.0.min.js"></script>-->
-<!--<script src="scripts/js/bootstrap-3.3.7.min.js"></script>-->
+<!--<script src="scripts/js/bootstrap-4.0.0a3.min.js"></script>-->
 <script>
 
 </script>
