--- a/project/modules/logboard-views/app/views/page-template.html
+++ b/project/modules/logboard-views/app/views/page-template.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="../favicon.ico">
     <title> title here 标题</title>
     <!--<link href="../res/styles/css/bootstrap-4.0.0a3.css" rel="stylesheet">-->
-    <link href="../res/styles/css/bootstrap-3.3.7.css" rel="stylesheet">
+    <link href="../res/vendor/css/bootstrap-3.3.7.css" rel="stylesheet">
     <!--<link href="../res/styles/general.css" rel="stylesheet">-->
     <link href="../res/styles/layout.css" rel="stylesheet">
     <!--<link href="styles/css/bootstrap-4.0.0a3.min.css" rel="stylesheet">-->
@@ -59,11 +59,10 @@
 <script src="../res/scripts/js/jquery-3.1.0.js"></script>
 <script src="../res/scripts/js/holder-2.6.0.min.js"></script>
 <script src="../res/scripts/js/tether-1.3.2.min.js"></script>
-<!--<script src="../res/scripts/js/bootstrap-4.0.0a3.js"></script>-->
-<script src="../res/scripts/js/bootstrap-3.3.7.js"></script>
+<script src="../res/vendor/js/bootstrap-3.3.7.js"></script>
 <!--<script src="../res/scripts/js/d3-4.2.1.js"></script>-->
 <!--<script src="scripts/js/jquery-3.1.0.min.js"></script>-->
-<!--<script src="scripts/js/bootstrap-4.0.0a3.min.js"></script>-->
+<!--<script src="scripts/js/bootstrap-3.3.7.min.js"></script>-->
 <script>
 
 </script>
