--- a/project/modules/logboard-views/app/res/styles/logssearch.css
+++ b/project/modules/logboard-views/app/res/styles/logssearch.css
@@ -1,19 +1,32 @@
-#imaginary_container{
-    margin-top:20%; /* Don't copy this */
+#imaginary_container {
+    margin-top: 20%; /* Don't copy this */
 }
-.stylish-input-group .input-group-addon{
+
+.stylish-input-group .input-group-addon {
     background: white !important;
 }
-.stylish-input-group .form-control{
-    border-right:0;
-    box-shadow:0 0 0;
-    border-color:#ccc;
+
+.stylish-input-group .form-control {
+    border-right: 0;
+    box-shadow: 0 0 0;
+    border-color: #ccc;
 }
-.stylish-input-group button{
-    border:0;
-    background:transparent;
+
+.stylish-input-group button {
+    border: 0;
+    background: transparent;
 }
+
 .row-index {
     width: 50px;
     display: inline-block;
+}
+
+.choose_btn {
+    width: 30%;
+}
+
+.margin_lr2{
+    margin-left:1%;
+    margin-right:1%;
 }
