--- a/project/modules/logboard-views/app/views/bak/index-start-161113-bootstrap4.html
+++ b/project/modules/logboard-views/app/views/bak/index-start-161113-bootstrap4.html
@@ -57,32 +57,32 @@
 </div>
 
 <!--顶部导航栏高度站位符-->
-<div class="divider_white6  "></div>
+<div class="divider_white60  "></div>
 <!--/顶部导航栏高度站位符-->
 
 <!--首屏简介模块-->
 <div id="logsTop" class="container-fluid screen-page ">
     <!--3大快速入口-->
-    <div class="row _text_align_center divider_white40 bg_blue_svg ">
+    <div class="row _text_align_center divider_white400 bg_blue_svg ">
         <div class="col-sm-4 " onclick="window.open('logs-search.html')">
             <div style="margin-top: 25%">
                 <img class="top-icon" src="../../images/top-search.svg" alt="日志搜索">
-                <div class="row divider_white3 "></div>
-                <button class="btn color_white_100  transparent_bg _white_border _width40 letter_spacing4">日志搜索</button>
+                <div class="row divider_white30 "></div>
+                <button class="btn c_fff  bg_transparent _white_border _width40 letter_spacing4">日志搜索</button>
             </div>
         </div>
         <div class="col-sm-4 " onclick="window.open('logs-stats.html')">
             <div style="margin-top: 25%">
                 <img class="top-icon" src="../../images/top-monitor.svg" alt="日志监控">
-                <div class="row divider_white3 "></div>
-                <button class="btn color_white_100  transparent_bg _white_border _width40 letter_spacing4">日志监控</button>
+                <div class="row divider_white30 "></div>
+                <button class="btn c_fff  bg_transparent _white_border _width40 letter_spacing4">日志监控</button>
             </div>
         </div>
         <div class="col-sm-4 " onclick="window.open('logs-stats.html')">
             <div style="margin-top: 25%">
                 <img class="top-icon" src="../../images/top-stats.svg" alt="日志统计">
-                <div class="row divider_white3 "></div>
-                <button class="btn color_white_100  transparent_bg _white_border _width40 letter_spacing4">日志统计</button>
+                <div class="row divider_white30 "></div>
+                <button class="btn c_fff  bg_transparent _white_border _width40 letter_spacing4">日志统计</button>
             </div>
         </div>
     </div>
@@ -112,7 +112,7 @@
             </div>
         </div>
     </div>
-    <div class="divider_white1 ">
+    <div class="divider_white100 ">
         <a name="aLogsOverview"></a>
     </div>
 </div>
@@ -127,7 +127,7 @@
             <div class="row">
                 <svg id="svgExpStatsPie" width="200" height="200"></svg>
             </div>
-            <div class="divider_white1"></div>
+            <div class="divider_white100"></div>
             <div class="row">
                 <svg id="svgExpStatsLegend" width="210" height="200"></svg>
             </div>
@@ -150,7 +150,7 @@
                     </span>
                 </div>
             </div>
-            <div class="divider_white2"></div>
+            <div class="divider_white200"></div>
             <div id="logsGeneralCurve" class="row bg_white_pure">
                 <div class="col-sm-12 _text_align_center">
                     <svg id="svgLogsGenaral" width="960" height="400"></svg>
@@ -169,9 +169,9 @@
 <!--异常监控模块-->
 <div id="logsException" class="container-fluid screen-page bg_gray_barely ">
     <!--<a name="aLogsException"></a>-->
-    <div class="row divider_white3"></div>
+    <div class="row divider_white30"></div>
     <!--曲线图标题部分-->
-    <div id="expLogsHeader" class="row divider_white4 ">
+    <div id="expLogsHeader" class="row divider_white400 ">
         <div class="col-sm-4 _text_align_center">
         </div>
         <div class="col-sm-4 _text_align_center">
@@ -198,7 +198,7 @@
     <div id="expDetails" class=" row ">
 
         <div class="col-sm-1  _text_align_center _to_top30 ">
-            <i class="fa  fa-angle-left fa-4x  color_gray_shallow"></i>
+            <i class="fa  fa-angle-left fa-4x  c_f0f0f0"></i>
         </div>
 
         <div class="col-sm-10  ">
@@ -295,7 +295,7 @@
         </div>
 
         <div class="col-sm-1  _text_align_center _to_top30 ">
-            <i class="fa  fa-angle-right fa-4x  color_gray_shallow"></i>
+            <i class="fa  fa-angle-right fa-4x  c_f0f0f0"></i>
         </div>
     </div>
 </div>
@@ -305,7 +305,7 @@
 <!--日志统计模块-->
 <div id="logsStats" class="container-fluid  screen-page bg_white_pure _text_align_center">
     <a name="aLogsStats"></a>
-    <div class="row divider_white3"></div>
+    <div class="row divider_white30"></div>
     <h2>日志统计</h2>
     <div>
         <svg id="svgLogsForce" width="1080" height="512"></svg>
@@ -316,7 +316,7 @@
 <!--用户挖掘模块-->
 <div id="logsBehavior" class="container-fluid screen-page bg_gray_shallow">
     <a name="aLogsBehavior"></a>
-    <div class="row divider_white3"></div>
+    <div class="row divider_white30"></div>
     <div class="row ">
 
         <div class="col-sm-3">
@@ -372,13 +372,13 @@
 
 <div id="lastFooter" class="container-fluid _divider_stripe bg_gray_barely">
     <a name="about"></a>
-    <div class="row divider_white4"></div>
+    <div class="row divider_white400"></div>
     <div class="row _text_align_center">
         <div class="col-sm-12">
             <div class="h5">联系我们</div>
         </div>
     </div>
-    <div class="row divider_white2"></div>
+    <div class="row divider_white200"></div>
 
     <div class="row">
         <div class="col-sm-6 _text_align_right">
