--- a/project/modules/logboard-views/app/res/styles/colors.css
+++ b/project/modules/logboard-views/app/res/styles/colors.css
@@ -18,14 +18,27 @@
     background-color: #ffffff
 }
 
-.color_white_100 {
+.bg_f5f5f5{
+    background-color: #f5f5f5;
+}
+
+.bg_transparent {
+    background-color: transparent;
+}
+
+.c_fff {
     color: #ffffff;
 }
 
-.color_gray_shallow {
-    color: #f1f1f1;
+.c_f0f0f0 {
+    color: #f0f0f0;
 }
 
-.transparent_bg {
-    background-color: transparent;
+.c_999{
+    color: #999;
 }
+
+.c_bdbdbd {
+    color: #bdbdbd;;
+}
+
